--- a/indexeiu.html
+++ b/indexeiu.html
@@ -25,7 +25,7 @@
 			 				<li><a href="">NEWS</a></li>
 			                <li><a href="">POLICY</a></li>
 			 				<li><a href="login.php">LOGIN</a></li>
-			 				<li><a href="">JOIN IN</a></li>
+			 				<li><a href="register.php">JOIN IN</a></li>
 			 			</ul>
 			 		</nav>
 			 	</div>
@@ -74,7 +74,7 @@
 						<div class="card">
 						  <img src="images/news-2.jpg" class="card-img-top" alt="...">
 						  <div class="card-body">
-						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+						    <p class="card-text">Responsible officers record every assignment for proper duty documentation and rotation.</p>
 						  </div>
 						</div>
 					</div>
@@ -82,7 +82,7 @@
 						<div class="card" >
 						 <img src="images/news-3.jpg" class="card-img-top" alt="...">
 						  <div class="card-body">
-						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+						    <p class="card-text">Trained security staff remain alert and communicate regularly to ensure campus safety.</p>
 						  </div>
 						</div>
 					</div>
@@ -90,7 +90,7 @@
 						<div class="card">
 						  <img src="images/news-4.jpg" class="card-img-top" alt="...">
 						  <div class="card-body">
-						    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+						    <p class="card-text">Staff are assigned to strategic areas including cafeterias to maintain a secure environment.</p>
 						  </div>
 						</div>
 					</div>
@@ -131,10 +131,6 @@
 		  {
 		    image: "images/slider-1.jpg",
 		   
-		  },
-		  {
-		    image: "images/slider-2.jpg",
-		 
 		  },
 		  {
 		    image: "images/slider-3.jpg",
